# MCP_BACKEND_OPENROUTER

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_DOCUMENTATION.md  CONFIGURABLE_TIMEOUT_DOCS.md  DOCUMENTATION_IMPROVEMENTS.md  FLEXIBLE_LLM_CLIENT.md  FRONTEND_INTEGRATION.md  MAX_TOOL_HOPS_CONFIG.md  MODULAR_CHAT_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REQUEST_ID_INDEXING_OPTIMIZATION.md  RUNTIME_CONFIG_README.md  chat_history.db.bak.20250821-025259  dev.sh  events.db  events.jsonl  example_runtime_config_usage.py  format.sh  openrouter_models_cache.json  performance_test.py  pyproject.toml  run.sh  run_tests.sh  setup.sh  test_config.py  test_configurable_timeout.py  test_imports.py  test_indexing.py  test_llm_logging.py  test_log_levels.py  test_logging.py  test_max_tool_hops.py  test_performance.py  test_resource_cleanup.py  test_system.py  verify_persistence.py
.github/: copilot-instructions.md
Servers/: config_server.py  demo_prompt_server.py  demo_server.py  openrouter_models_server.py
scripts/: format.py
src/: application.py  chat_service.py  config.py  config.yaml  main.py  runtime_config.yaml  servers_config.json  tool_schema_manager.py  websocket_server.py
src/chat/: __init__.py  chat_orchestrator.py  conversation_manager.py  logging_utils.py  models.py  resource_loader.py  simple_chat_handler.py  streaming_handler.py  tool_executor.py
src/clients/: __init__.py  llm_client.py  mcp_client.py  model_capabilities.py
src/history/: __init__.py  auto_persist_repo.py  chat_store.py  chat_store.py.backup  chat_store_new.py  conversation_utils.py  factory.py  hybrid_repo.py  memory_repo.py  models.py  repository.py  sqlite_repo.py  token_counter.py  utils.py
src/llm/: __init__.py  client.py
src/mcp_client/: __init__.py  client.py
